k8s-app-config/product/standard/grafana-prometheus-pro/prometheus-saf/prometheus-saf-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: prometheus-saf
  name: prometheus-saf
  namespace: monitoring
spec:
  rules:
  - host: prometheus.lzxlinux.com
    http:
      paths:
      - backend:
          serviceName: prometheus-saf
          servicePort: 9090
        path: /
